--- a/services/src/main/webapp/css/login.css
+++ b/services/src/main/webapp/css/login.css
@@ -124,7 +124,7 @@ html,body,#mapa {
     outline: none; /* Remove Chrome's outline */
 }
 
-.form input[type=submit]{
+.form input[type=button]{
     /* Size and position */
     width: 47%;
     height: 35px;
@@ -144,7 +144,7 @@ html,body,#mapa {
     font-weight: bold;
 }
 
-.form input[type=submit] {
+.form input[type=button] {
     margin-left: 1%;
     background: #fbd568; /* Fallback */
     background: -moz-linear-gradient(#fbd568, #ffb347);
@@ -158,18 +158,18 @@ html,body,#mapa {
     text-shadow: 0 1px rgba(255,255,255,0.3);
 }
 
-.form input[type=submit]:hover{
+.form input[type=button]:hover{
     box-shadow: 
         inset 0 1px rgba(255,255,255,0.3), 
         inset 0 20px 40px rgba(255,255,255,0.15);
 }
 
-.form input[type=submit]:active{
+.form input[type=button]:active{
     top: 1px;
 }
 
 /* Fallback fro broswers that don't support box shadows */
-.no-boxshadow .form input[type=submit]:hover {
+.no-boxshadow .form input[type=button]:hover {
     background: #ffb347;
 }
 
