--- a/src/main/webapp/css/DT_bootstrap.css
+++ b/src/main/webapp/css/DT_bootstrap.css
@@ -16,12 +16,13 @@ div.dataTables_info {
 	padding-top: 8px;
 }
 
+/*
 div.dataTables_paginate {
 	float: right;
 	margin: 0;
 	margin-right: 80px;
 }
-
+*/
 table.table {
 	clear: both;
 	margin-bottom: 6px !important;
